# zkrp

./: .containerignore  .gitignore  Cargo.toml  LICENSE  README.md  fly.toml  index.html
auth/: Cargo.toml  build.rs
auth/assets/email/: verify.html  verify.txt
auth/db/: init.sql
auth/src/: mailer.rs  main.rs  service.rs
cli/: Cargo.toml
cli/src/: main.rs
controller/: .env.local  Cargo.toml  Containerfile  Dockerfile  build.rs  compose.yml  fly.toml  relay.service
controller/src/: behavior.rs  blob.rs  config.rs  grpc.rs  main.rs  relay.rs
controller/src/api/: blob.rs  log.rs  mailbox.rs  mod.rs  relay.rs
controller/tools/: set_creds.sh  setup.sh
ios/: Cargo.toml  build.rs
ios/src/: behavior.rs  lib.rs  likes.rs  node.rs
libghost/: Cargo.toml  build.rs
libghost/src/: addr.rs  behavior.rs  blob.rs  codec.rs  context.rs  debug.rs  handler.rs  identity.rs  keybundle.rs  lib.rs  mailbox.rs  messager.rs  node.rs  relay.rs  store.rs  traits.rs  transport.rs
libghost/src/protocols/ghost/: ghost.proto  mod.rs
libghost/src/protocols/ghost/v0/: message.rs
proto/: auth.proto  mailbox.proto  relay.proto
