[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14.6"
prost = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Nullifier set. sqlx over a persistent-volume Postgres.
sqlx = { version = "0.9", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
] }

# The pepper never leaves KMS: nullifier = KMS.GenerateMac(key, email).
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-kms = "1"
aws-sdk-sesv2 = "1"

# Local MAC keys (tokens, issuance seed) + SHA-256.
ring = "0.17"

# App Attest: CBOR attestation object, X.509 chain, P-256 ECDSA.
ciborium = "0.2"
x509-parser = "0.18"
p256 = { version = "0.14", features = ["ecdsa"] }

# BBS. NOTE: bbs_plus 0.25 pins arkworks ^0.4 -- do NOT bump these to 0.6 or
# the curve types stop unifying and nothing compiles.
bbs_plus = { version = "0.25", default-features = false, features = ["std"] }
schnorr_pok = { version = "0.23", default-features = false, features = ["std"] }
ark-bls12-381 = { version = "0.6", default-features = false, features = [
  "curve",
] }
ark-ec = { version = "0.6", default-features = false }
ark-ff = { version = "0.6", default-features = false }
ark-serialize = { version = "0.6", default-features = false }
ark-std = { version = "0.6", default-features = false }
blake2 = "0.10"

# ark-std 0.4 uses rand 0.8 (rand_core 0.6). rand_chacha must be 0.3 to satisfy
# the RngCore bound on Signature23G1::new_with_committed_messages.
rand_chacha = "0.10"

[build-dependencies]
tonic-prost-build = "0.14"
reqwest = { version = "0.13", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
