[package]
name = "libghost"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56", features = [
  "macros",
  "tokio",
  "tcp",
  "quic",
  "noise",
  "yamux",
  "kad",
  "relay",
  "dns",
  "mdns",
  "dcutr",
  "autonat",
  "identify",
  "gossipsub",
] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.32"
prost = "0.14.3"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
rand = "0.9"
zeroize = { version = "1", features = ["std", "derive"] }
ring = "0.17"
tonic = "0.14"
tonic-prost = "0.14"
rusqlite = { version = "0.39", features = ["bundled"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = { version = "5.0.0-rc.1", features = ["rand_core"] }
sha3 = "0.12"
ulid = "1.2"
aes-gcm = "0.10.3"
thiserror = "2.0.18"
hex = "0.4.3"
hmac = "0.13.0"
chacha20poly1305 = "0.10"
sha2 = "0.11"

[build-dependencies]
prost-build = "0.14"
tonic-prost-build = "0.14"
